<resources>

    <string name="app_name" translatable="false">UpdateApps</string>
    <string name="app_package" translatable="false">de.vkay.updateapps</string>

    <string name="title_activity_alle_apps">AlleApps</string>
    <string name="title_activity_feedback">Beitrag verfasen</string>
    <string name="title_activity_user_feedback">Eigene Beiträge</string>
    <string name="title_benutzer">BenutzerPanel</string>

    <!-- Non-translatable -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="conDesc" translatable="false">contentDesc</string>
    <string name="nav_header_text" translatable="false">UpdateApps</string>
    <string name="ok" translatable="false">OK</string>
    <string name="experim_changelog" translatable="false">Experim. Changelog</string>
    <string name="aumain_feedback" translatable="false">Feedback</string>

    <!-- Navigation Drawer Items -->
    <string name="nav_allapps">Alle Apps</string>
    <string name="nav_menu_general">Allgemein</string>
    <string name="nav_web">Webseite</string>
    <string name="nav_user_panel">Benutzer-Panel</string>

    <!-- WelcomeScreen -->
    <string name="screen1_title">Willkommen!</string>
    <string name="screen1_desc">Finde heraus, was es alles Neues gibt.</string>
    <string name="screen2_title">Bleibe aktuell!</string>
    <string name="screen2_desc">Lade dir neue Apps herunter.</string>
    <string name="screen_setdetails_desc">Melde dich an, um Feedback zu schreiben und um keine App zu verpassen.</string>

    <string name="experimental">Die folgenden Versionen sind frühere oder experimentelle Versionen,
        die Features im Aufbau beinhalten und somit getestet werden können. Man wird nicht über neue Exp. benachrichtigt.</string>

    <string name="info">Info</string>
    <string name="changelog">Changelog</string>
    <string name="finish">Fertig</string>
    <string name="change">ändern</string>
    <string name="download">Herunterladen</string>
    <string name="message">Nachricht</string>
    <string name="login">Anmelden</string>
    <string name="register">Registrieren</string>
    <string name="description">Beschreibung</string>
    <string name="load">Laden</string>
    <string name="settings">Einstellungen</string>
    <string name="logout">Abmelden</string>
    <string name="error">Fehler</string>
    <string name="update">Aktualisieren</string>
    <string name="often">Oft genug geladen</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="network">Netzwerk</string>

    <string name="menu_send">Sende</string>
    <string name="user_register">Registrieren</string>
    <string name="welcome_ueberspringen">Überspringen</string>
    <string name="user_panel_anpassungen">Anpassungen</string>
    <string name="main_einige_apps">Einige Apps</string>
    <string name="feedback_betreff">Betreff</string>
    <string name="main_more">Mehr</string>
    <string name="welcome_last_step">Letzter Schritt</string>
    <string name="user_pass">Passwort:</string>
    <string name="user_panel_newname">Neuer Name</string>
    <string name="welcome_start_login_assistent">Starte Login-Assistent</string>
    <string name="main_streichen">Streiche mal von links nach rechts</string>
    <string name="au_versionen_oldexp">Ältere und experim. Versionen</string>
    <string name="user_register_pass_ern">Passw. (ern.):</string>
    <string name="feedback_install_anh">Installierte Version anhängen</string>
    <string name="user_panel_meine_beitr">Meine Beiträge</string>
    <string name="login_username">"Benutzer: "</string>
    <string name="dialog_back">Zurück</string>
    <string name="dialog_remove_feedback">Willst du deinen Beitrag wirklich verwerfen?</string>
    <string name="dialog_verwerfen">Verwerfen</string>
    <string name="error_send">Fehler beim Senden</string>
    <string name="send_success">Senden erfolgreich</string>
    <string name="delete_error">Fehler beim Löschen</string>
    <string name="delete_success">Löschen erfolgreich</string>
    <string name="dialog_delete_msg">Willst du den Beitrag wirklich entfernen?</string>
    <string name="no_wifi_connection">Keine WiFi-Verbindung</string>
    <string name="app_abonniert">App abonniert</string>
    <string name="app_deabonniert">App deabonniert</string>
    <string name="download_started">Download gestartet</string>
    <string name="permission_denied">Verweigert</string>
    <string name="full_changelog">Kompletter Changelog</string>
    <string name="installed_experimental"><![CDATA[<b>Installierte Exp.-Version: </b>]]></string>
    <string name="no_experim_builds_available">Keine experim. Versionen verfügbar.</string>
    <string name="aumain_uebersicht">Übersicht</string>
    <string name="aumain_version">Versionen</string>
    <string name="success">Hat geklappt</string>
    <string name="user_panel_name_vergeben">Name bereits vergeben</string>
    <string name="userlogin_passname_falsch">Benutzer oder Passwort falsch</string>
    <string name="login_success">Login erfolgreich</string>
    <string name="userregister_username_vergeben">Benutzername schon vergeben</string>
    <string name="update_database">Datenbank aktualisiert</string>
    <string name="settings_autostart_header" translatable="false">Autostart-Assistent</string>
    <string name="settings_autoinstall_text">Startet den Package-Installer direkt nach Download.</string>
    <string name="settings_global_header">Globale Ankündigungen</string>
    <string name="settings_global_text">Erhalte eine Benachrichtigung, wenn bspw. eine neue App im Sortiment ist</string>
    <string name="setttings_wifionly_header">Nur WLAN</string>
    <string name="settings_wifionly_text">Limitiert den Download der Apps auf eine WLAN-Verbindung</string>
    <string name="update_this_app">Über diese App</string>
    <string name="nav_update_when_available">Aktualisierung</string>
    <string name="not_latest_version_header">Nicht aktuellste Version</string>
    <string name="not_latest_version_text">Die lokale DB-Version dieser App ist nicht auf dem neuesten Stand. Der Download würde nicht funktionieren.\n\nBitte aktualisiere die Datenbank im Homescreen mit dem Such-Button.</string>

    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et pulvinar augue, ac vehicula leo. Integer ac felis sem. Ut lobortis ex quis nibh ultrices, vel posuere tellus finibus. Maecenas in velit non lacus feugiat pretium. Sed sed mi eu augue gravida imperdiet vel eget nibh. Etiam urna enim, interdum vel erat in, mollis tincidunt neque. Nunc mauris turpis, pretium eget iaculis in, posuere quis nisl. Aenean porttitor justo augue, at commodo velit pellentesque vel. Nam bibendum dui quis blandit lobortis.

Donec feugiat rutrum sodales. Nulla efficitur, augue vitae pellentesque egestas, dolor lacus aliquam risus, bibendum porta libero mi quis lacus. Quisque lacinia lectus in tempus condimentum. Curabitur vulputate sagittis nisi quis placerat. Fusce facilisis felis ac lorem consectetur, vel pellentesque dui imperdiet. Nunc efficitur pellentesque diam, eget semper quam mattis non. Sed leo enim, euismod eu purus et, consectetur mollis velit. Integer eleifend nec felis vel placerat. Etiam facilisis varius dolor in venenatis. Suspendisse cursus, massa in malesuada egestas, nulla est condimentum tellus, id luctus ex augue quis ex.

Etiam et elementum nisl, eget congue elit. Mauris laoreet ornare tellus, id luctus enim ultricies vel. Phasellus aliquet tristique lorem non fermentum. Duis tempor non massa a feugiat. Mauris sit amet diam sodales, facilisis diam egestas, sodales velit. Integer porttitor suscipit felis, eu vestibulum enim scelerisque et. Nam ac erat efficitur, mattis tellus vitae, eleifend nisi. Nullam volutpat blandit tristique. Aliquam erat volutpat. Donec justo turpis, semper nec posuere non, accumsan a quam. Etiam ac nisl nec ligula venenatis ultricies eu quis libero.

Nunc facilisis magna ac velit pretium tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam porttitor justo sapien, sed consequat libero dictum ut. Curabitur eget pharetra nisl, ac ultrices velit. Phasellus eget arcu a metus semper fringilla egestas sit amet sapien. Nulla tincidunt nulla congue, lobortis leo in, tristique mauris. Donec lobortis elementum gravida. In varius accumsan est, et pellentesque est finibus quis.

Etiam elementum blandit mattis. Nam sit amet felis a felis mollis dictum. Praesent ac sodales nisi, at viverra ipsum. Nunc molestie volutpat diam nec tincidunt. Quisque lobortis felis nec eros tristique, non imperdiet mi dictum. Nullam orci ex, imperdiet a euismod eu, malesuada eu orci. Proin dolor odio, sollicitudin laoreet feugiat ac, molestie in arcu. Duis vitae congue magna. Aenean at ultrices erat. Donec elementum semper varius. Donec et justo gravida, accumsan eros at, dapibus enim.</string>
    <string name="installed">Installiert:</string>

</resources>
