<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.vkay.updateapps.AppUebersicht.AUMain"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/changelog"/>

            <ImageView
                android:id="@+id/auversion_image_changelog"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/information"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/conDesc"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auversion_tv_changelog" />

        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="3dip"
            android:background="@color/grey" />

        <!-- Versionen -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/au_versionen_oldexp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:id="@+id/auversion_tv_expversion"
            android:layout_marginBottom="10dp"
            android:text="@string/experimental" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonMaterialDarkBlue"
            android:text="@string/load"
            android:id="@+id/auversion_btn_load"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/auversion_recycler_exp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>