<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/userRegisterBg"
    tools:context="de.vkay.updateapps.User.UserRegister">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_register"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="120dp"
            android:textSize="18sp"
            android:text="@string/username"
            android:gravity="center_vertical"
            android:id="@+id/user_tv_username"
            android:layout_height="40dp"
            android:labelFor="@id/user_edit_username"/>

        <EditText
            android:layout_width="150dp"
            android:layout_toEndOf="@+id/user_tv_username"
            android:maxLines="1"
            android:maxLength="25"
            android:inputType="textPersonName"
            android:id="@+id/user_edit_username"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="120dp"
            android:text="@string/user_pass"
            android:gravity="center_vertical"
            android:layout_below="@id/user_tv_username"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:id="@+id/user_tv_userpassword"
            android:layout_height="40dp"
            android:labelFor="@id/user_edit_userpassword"/>

        <EditText
            android:layout_width="150dp"
            android:id="@+id/user_edit_userpassword"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/user_tv_userpassword"
            android:layout_below="@+id/user_edit_username"
            android:inputType="textPassword"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="120dp"
            android:text="@string/user_register_pass_ern"
            android:gravity="center_vertical"
            android:layout_below="@id/user_tv_userpassword"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:id="@+id/user_tv_userpassword_erneut"
            android:layout_height="40dp" />

        <EditText
            android:layout_width="150dp"
            android:id="@+id/user_edit_userpassword_erneut"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/user_tv_userpassword_erneut"
            android:layout_below="@+id/user_edit_userpassword"
            android:inputType="textPassword"
            android:layout_height="40dp" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/user_btn_login"
        android:background="@color/userRegisterBgBtn"/>

</LinearLayout>
