<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.vkay.updateapps.AppUebersicht.Feedback.FeedbackActivity"
    tools:showIn="@layout/activity_feedback2"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:layout_height="0dp"
        app:errorEnabled="true"
        android:textColorHint="@color/TextInputLayoutColorhint"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/feedback_edit_betreff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:maxLength="40"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="16sp"
            android:hint="@string/feedback_betreff"
            android:background="@android:color/transparent" />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/TextInputLayoutColorhint"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/feedback_edit_nachricht"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:hint="@string/message" />

        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="@string/feedback_install_anh"
            android:id="@+id/feedback_checkbox"/>

    </LinearLayout>

</LinearLayout>
